--- a/appsettings.json
+++ b/appsettings.json
@@ -6,5 +6,10 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
+
+  "ConnectionStrings": {
+    "myconn": "server=N551\\SQLEXPRESS; database=CityDB;Trusted_Connection=True;"
+
+  },
   "AllowedHosts": "*"
 }
